# neurocred

./: .gitignore  Backend.md  CLAUDE.md  Data.md  Math.md  Ps.md  Schema.md  Theory.md  USP.md  api.md  brand.md  howisthedatamade.md  howthedataismade.md  howtorun.md  implementation_depth.md  new features.md  pyproject.toml  readme.md  schema.md  theory.md  tier1.md  tier2.md  tier3.md  tier4.md  tier4_tier8.md  tier6.md  tier7.md  tier9.md
arch/: arch.erasercode  readme.md
arch/tier1/: arch.erasercode  readme.md
arch/tier10/: arch.erasercode  readme.md
arch/tier2/: arch.erasercode  readme.md
arch/tier3/: arch.erasercode  readme.md
arch/tier4/: arch.erasercode  readme.md
arch/tier5/: arch.erasercode  readme.md
arch/tier6/: arch.erasercode  readme.md
arch/tier7/: arch.erasercode  (+1 more)
config/: settings.py
docs/: airavat_architecture.eraserdiagram  api.md  backend-not-in-frontend.md  data.md  howthedataismade.md  implementation.md  math.md  pitch.md  ps.md  tier1.md  tier4.md  tier4_tier8.md  tier5.md  tier7.md
frontend/: .env.example  brand.md  components.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
scratch/: test_resolve.py
scripts/: bootstrap.sh  phase1_generate.sh  phase2_redis_ingest.sh  phase3_features.sh  phase4_train.sh  phase5_tests.sh  phase6_api.sh  phase7_frontend.sh  run_offline.sh  run_online.sh  run_tests.sh  start_server.sh  stress_twin_workflow.sh
tests/: test_tier1.py  test_tier2.py  test_tier3.py  test_tier4.py  test_tier5.py  test_tier6.py  test_tier7.py  test_tier8.py  test_tier9.py
(+188 files in other folders)
