[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airavat"
version = "0.1.0"
description = "Real-Time Financial Behavioural Digital Twin & Cognitive Credit Engine"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    # Streaming
    "redis>=5.0",
    # Data processing
    "polars",
    "pyarrow",
    "numpy",
    "scipy",
    # ML / embeddings
    "sentence-transformers>=2.7",
    "scikit-learn",
    "xgboost",
    "shap",
    # Synthetic data
    "faker",
    "sdv",
    # Utilities
    "httpx",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.hatch.envs.default.scripts]
# Run all workers (use separate terminals or tmux)
api         = "uvicorn src.api.main:app --host 0.0.0.0 --port 8001 --reload"
ingest      = "python -m src.ingestion.redis_producer"
classify    = "python -m src.classifier.event_processor"
features    = "python -m src.features.engine"
cohorts     = "python -m src.features.peer_cohort"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
